# ProcSight

./: .gitignore  README.md  main.py  out.csv  pyproject.toml
.github/workflows/: tests.yml
scripts/: stress.sh
src/cli/: parser.py
src/core/: file_export.py  monitor.py  sample_collector.py
src/models/: metrics.py
src/visualization/: plot.py
tests/: conftest.py  test_cli_parser.py  test_file_export.py  test_main_smoke.py  test_monitor.py  test_plot.py  test_sample_collector.py
